# ahtt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
src/: html_ir.cpp  html_ir.hpp  linker.cpp  linker.hpp  main.cpp  parser.cpp  parser.hpp  translator.cpp  translator.hpp
templates/: header.ejs  impl.ejs
views/: test_page.at
views/includes/: external.at  menu.at
views/layouts/: base.at
